# DeformingMesh3D-plugin

./: .gitignore  LICENSE.txt  README.md  pom.xml  release.properties
src/main/java/: DeformingMesh3DApp.java  DeformingMeshSans3D.java  Headless3DApp.java  Mouse_X.java
src/main/java/deformablemesh/: BoundingBoxTransformer.java  DeformableMesh3DTools.java  Deforming3DMesh_Plugin.java  MeshDetector.java  MeshImageStack.java  MeshImageSubStack.java  SegmentationController.java  SegmentationModel.java
src/main/java/deformablemesh/examples/: Broken_Display.java  CreateCrossSectionMovies.java  PlotAverageIntensities.java  PredictFromDistanceTransform.java  SliceMeshes.java  StabilizeMeshes.java
src/main/java/deformablemesh/experimental/: RemotePrediction.java
src/main/java/deformablemesh/externalenergies/: BallooningEnergy.java  CurveBasedEnergy.java  ExternalEnergy.java  GradientEnergy.java  ImageEnergyType.java  IntensityEnergy.java  NodeAttractor.java  ParabolicSurface.java  PerpendicularGradientEnergy.java  PerpendicularIntensityEnergy.java  (+6 more)
src/main/resources/: about.html  help.html  load-bindings.js  plugins.config
src/python/: write_test.py
src/python/bmf-io/: LICENSE  README.md  setup.cfg  setup.py
src/python/bmf-io/binarymeshformat/: __init__.py  meshdata.py  reader.py
src/python/bmf-io/src/binarymeshformat/: __init__.py  meshdata.py  reader.py  writer.py
src/python/bmf-io/tests/: write_test.py
src/python/examples/: vedo-meshes.py
src/python/meshreader/: readers.py
src/test/java/deformablemesh/: ControllerTest.java  MeshImageStackTesting.java
(+159 files in other folders)
