[metadata]
# replace with your username:
name = binarymeshformat
version = 1.0
author = Matthew Smith
author_email = matthew.smith3@crick.ac.uk
description = Reading and writing triangulated meshes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PaluchLabUCL/DeformingMesh3D-plugin/tree/master/src/python
project_urls =
    Bug Tracker = https://github.com/PaluchLabUCL/DeformingMesh3D-plugin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
